--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,7 +51,7 @@
 <span class="f12 bold">更新日期：2022年07月26日</span>
 </p>
 <p class="f12" style="line-height:125%;margin:0pt 0pt 7.8pt;orphans:0;text-align:justify;widows:0">
-<span class="f12 bold">更新日期：2022年07月26日</span>
+<span class="f12 bold">生效日期：2022年07月26日</span>
 </p>
 <p class="mg78" style="orphans:0;text-align:justify;widows:0">
 <span style="font-size:16pt;font-weight:bold">&#xa0;</span>
@@ -276,7 +276,7 @@
 <span class="f12">&#xa0;</span>
 </p>
 <p class="f12 lh15" style="margin:3pt 0pt;orphans:0;text-align:justify;widows:0">
-<span class="f12">我们的产品基于DCloud uni-app(5+ App/Wap2App)开发，应用运行期间需要收集您的设备唯一识别码（IMEI/android ID/DEVICE_ID/IDFA、SIM 卡 IMSI 信息、OAID）以提供统计分析服务，并通过应用启动数据及异常错误日志分析改进性能和用户体验，为用户提供更好的服务。</span>
+<span class="f12">我们的产品基于DCloud uni-app(5+ App/Wap2App)开发，应用运行期间需要收集您的设备唯一识别码（IMEI/android ID/DEVICE_ID/IDFA、SIM 卡 IMSI 信息、OAID）以提供统计分析服务，并通过应用启动数据及异常错误日志分析改进性能和用户体验，为用户提供更好的服务。详情内容请访问《DCloud用户服务条款》。（DCloud用户服务条款超链至：<a href="https://ask.dcloud.net.cn/protocol.html">https://ask.dcloud.net.cn/protocol.html</a>）</span>
 </p>
 <p class="f12 lh15" style="margin:3pt 0pt;orphans:0;text-align:justify;widows:0">
 <span class="f12">&#xa0;</span>
@@ -443,7 +443,7 @@
 <p class="f12 lh15" style="margin:0pt 0pt 7.8pt 42.25pt;text-align:justify;text-indent:-21.25pt">
 <span class="f12 bold">(3)</span>
 <span class="f7r">&#xa0;&#xa0;&#xa0;&#xa0;</span>
-<span class="f12 bold">如果您的浏览器或浏览器附加服务允许，您可修改对Cookies的接受程度或拒绝我们的Cookies。有关详情，请参见https://www.aboutcookies.org/。但如果您这么做，在某些情况下可能会影响您安全使用我们的产品或服务。</span>
+<span class="f12 bold">如果您的浏览器或浏览器附加服务允许，您可修改对Cookies的接受程度或拒绝我们的Cookies。有关详情，请参见<a href="https://www.aboutcookies.org/">https://www.aboutcookies.org/</a>。但如果您这么做，在某些情况下可能会影响您安全使用我们的产品或服务。</span>
 <a name="OLE_LINK2">
 <span class="f12 bold">同时，您仍然将收到</span>
 </a>
