--- a/one_2D.html
+++ b/one_2D.html
@@ -722,7 +722,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/win.m4a").play();
+				gameOverMusic = new Player("./music/win.mp3").play();
 				
 			}else if (win === false){
 				this.winner = 1-this.first;
@@ -1268,7 +1268,9 @@ $("#toolBtn > .review").click(review);
 /* 电脑版按键 */
 document.onkeydown = function(e){
 	console.log(e.key)
-	if (e.key == "F2"){ //评分
+	if (e.key == "Escape"){
+		go("index.html");
+	}else if (e.key == "F2"){ //评分
 		if (!$("#toolBtn > .scores").attr("disabled"))
 			scores();
 	}else if (e.key == "F3"){ //分析
