--- a/one_3D.html
+++ b/one_3D.html
@@ -313,7 +313,7 @@
 		<link rel="stylesheet" href="./layui/css/layui.css" />
 		
 		<!-- 调试工具 -->
-		<!-- <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+		<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
 		<script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 		<script>
 		if ( /ipad|iphone|midp|rv:1.2.3.4|ucweb|android|windows ce|windows mobile/.test( navigator.userAgent.toLowerCase() ) ){
@@ -321,7 +321,7 @@
 			eruda.init();
 			new VConsole();
 		}
-		</script> -->
+		</script>
 		
 		<!-- PianoMusic Bgm -->
 		<script src="./js/acoustic_grand_piano-ogg.js"></script>
@@ -1635,7 +1635,7 @@ let game = {
 				saveGameRecord();
 				if (gameOverMusic)
 					gameOverMusic.stop();
-				gameOverMusic = new Player("./music/win.m4a").play();
+				gameOverMusic = new Player("./music/win.mp3").play();
 				
 			}else if (win === false){
 				this.winner = 1-this.first;
@@ -1951,21 +1951,24 @@ function request(data){
 
 
 let lastMistake = null; //上次防误触物体
-let validClick = true; //是否有效点击
+let mouseTimes = 0; //移动次数
 setTimeout(()=>{ //等待loadScene
 	board.scene.onPointerObservable.add(function(e){
+		console.log(e)
 		if (e.type == 1){ //mousedown
-			validClick = true; //新一次点击
-			console.log("mousedown", validClick)
+			mouseTimes = 0;
+			//validClick = true; //新一次点击
+			console.log("mousedown", mouseTimes)
 		}else if (e.type == 4){ //mousemove
-			validClick = false; //不允许移动
-			console.log("mousemove", validClick)
+			mouseTimes++;
+			//validClick = false; //不允许移动
+			console.log("mousemove", mouseTimes)
 		}
 	});
 }, 600);
 $("#board").click(function(e){
-	console.log("click", validClick)
-	if (!validClick) return; //无效点击
+	console.log("click", mouseTimes)
+	if (mouseTimes > 5) return; //无效点击
 	if (!worker) return; //未初始化线程
 	if (game.winner !== false) return; //已结束
 	if (waiting) return; //上次未响应
@@ -2219,7 +2222,9 @@ $("#toolBtn > .review").click(review);
 /* 电脑版按键 */
 document.onkeydown = function(e){
 	console.log(e.key)
-	if (e.key == "F2"){ //评分
+	if (e.key == "Escape"){
+		go("index.html");
+	}else if (e.key == "F2"){ //评分
 		if (!$("#toolBtn > .scores").attr("disabled"))
 			scores();
 	}else if (e.key == "F3"){ //分析
