--- a/two_2D.html
+++ b/two_2D.html
@@ -1120,7 +1120,9 @@ $("#toolBtn > .review").click(review);
 /* 电脑版按键 */
 document.onkeydown = function(e){
 	console.log(e.key)
-	if (e.key == "F2"){ //评分
+	if (e.key == "Escape"){
+		go("index.html");
+	}else if (e.key == "F2"){ //评分
 		if (!$("#toolBtn > .scores").attr("disabled"))
 			scores();
 	}else if (e.key == "F3"){ //分析
